@@ -2,7 +2,7 @@
 
 <!--
   OpenRemote, the Home of the Digital Home.
-  Copyright 2008-2012, OpenRemote Inc.
+  Copyright 2008-2013, OpenRemote Inc.
 
   See the contributors.txt file in the distribution for a
   full listing of individual contributors.
@@ -78,6 +78,14 @@
   <property name = "junit.vm.work.dir" value = "${testcontainer.vm.work.dir}"/>
 
 
+  <!--
+   |    Set explicit character encoding for javac - this avoids issues with some build
+   |    environments which have different system default character encodings. Defaulting
+   |    all compiled source files to UTF-8.
+   +-->
+  <property name = "default.javac.encoding" value = "utf-8"/>
+
+
   <property name = "javadoc.locale" value = "en_US"/>
   <property name = "build-config.dir" value = "build_config"/>
   <property name = "instrumented.dir" value = "build/instrumented"/>
@@ -131,7 +139,7 @@
     <path location = "${config.dir}"/>
     <fileset dir = "${lib.dir}/apache" includes = "**/*.jar"/>
   </path>
-  
+
 
   <path id = "cobertura.path.id">
     <fileset dir = "${lib.dir}/cobertura" includes = "*.jar"/>
@@ -158,7 +166,7 @@
        ======================================================================================= -->
 
 
-  
+
   <!--
     | CLEAN:
     |
@@ -203,7 +211,7 @@
         <include name = "**/*.jar"/>
       </fileset>
       <fileset dir = "${lib.dir}/json">
-    	  <include name = "*.jar"/>
+        <include name = "*.jar"/>
       </fileset>
       <fileset dir = "${lib.dir}/json-path">
        <include name = "*.jar"/>
@@ -273,23 +281,24 @@
       </fileset>
     </copy>
 
-		<copy todir = "${webapp.classes.dir}">
-			<fileset dir = "${classes.dir}">
-				<include name = "**.*" />
-			</fileset>
-		</copy>
+    <copy todir = "${webapp.classes.dir}">
+      <fileset dir = "${classes.dir}">
+        <include name = "**.*" />
+      </fileset>
+    </copy>
 
-		<copy todir = "${classes.dir}">
-			<fileset dir = "${test.dir}">
-				<include name = "**/*.xml" />
-				<include name = "**/*.properties" />
-			</fileset>
-			<fileset dir = "${test.dir}">
-				<include name = "**/*.xml" />
-			</fileset>
- 		</copy>
-    
-    <javac destdir = "${classes.dir}" classpathref = "compile.path.id" debug = "${build.debug}" encoding="utf-8">
+    <copy todir = "${classes.dir}">
+      <fileset dir = "${test.dir}">
+        <include name = "**/*.xml" />
+        <include name = "**/*.properties" />
+      </fileset>
+      <fileset dir = "${test.dir}">
+        <include name = "**/*.xml" />
+      </fileset>
+    </copy>
+
+    <javac destdir = "${classes.dir}" classpathref = "compile.path.id"
+           debug = "${build.debug}" encoding = "${default.javac.encoding}">
       <src path = "${src.dir}"/>
     </javac>
   </target>
@@ -317,7 +326,8 @@
       </fileset>
     </copy>
 
-    <javac srcdir = "${test.dir}" destdir = "${classes.dir}" classpathref = "test.path.id" debug = "true" />
+    <javac srcdir = "${test.dir}" destdir = "${classes.dir}"
+           classpathref = "test.path.id" debug = "true" encoding = "${default.javac.encoding}"/>
   </target>
 
 
@@ -375,7 +385,7 @@
 
   </target>
 
-  
+
   <!--
     | WAR:
     |
@@ -421,7 +431,7 @@
         <include name = "**/*"/>
       </fileset>
     </copy>
-    
+
 
     <parallel>
 
@@ -436,7 +446,7 @@
             fork = "true">
       </java>
 
-      
+
 
       <sequential>
 
@@ -466,7 +476,7 @@
     </parallel>
 
     <antcall  target = "-generate-junit-report"/>
-    
+
   </target>
 
 
@@ -499,7 +509,7 @@
           .">
 
     <property name = "test" value = "org.openremote.controller.suite.RESTTests"/>
-    
+
     <!-- Call the JUnit task with 'junit.single.test' property set. -->
     <antcall target = "run-test">
       <param name = "junit.single.test" value = "true"/>
@@ -652,7 +662,8 @@
       </fileset>
     </copy>
 
-    <javac srcdir = "${test.dir}" destdir = "${classes.dir}" classpathref = "test.path.id" debug = "true" />
+    <javac srcdir = "${test.dir}" destdir = "${classes.dir}" classpathref = "test.path.id"
+           debug = "true" encoding = "${default.javac.encoding}"/>
   </target>
 
 
@@ -672,14 +683,15 @@
       </fileset>
     </copy>
 
-		<copy todir = "${webapp.classes.dir}">
-			<fileset dir = "${classes.dir}">
-				<include name = "**.*" />
-			</fileset>
-		</copy>
+    <copy todir = "${webapp.classes.dir}">
+      <fileset dir = "${classes.dir}">
+        <include name = "**.*" />
+      </fileset>
+    </copy>
 
-    
-    <javac destdir = "${classes.dir}" classpathref = "compile.path.id" debug = "${build.debug}">
+
+    <javac destdir = "${classes.dir}" classpathref = "compile.path.id"
+           debug = "${build.debug}" encoding = "${default.javac.encoding}">
       <src path = "${src.dir}"/>
     </javac>
 
@@ -828,7 +840,7 @@
     <cobertura-instrument todir = "${instrumented.dir}" datafile = "${cobertura.datafile}">
       <ignore regex = "org.apache.log4j.*"/>
       <ignore regex="org.openremote.controller.jetty.*"/>
-			<ignore regex="org.openremote.controller.suite.*"/>
+      <ignore regex="org.openremote.controller.suite.*"/>
       <fileset dir = "${classes.dir}">
         <include name = "**/*.class"/>
         <exclude name="**/Jetty*.class"/>
@@ -847,15 +859,15 @@
     <property name = "test.targetclasspath" value = "${instrumented.dir}"/>
     <antcall target = "test-cov"/>
     <delete includeemptydirs = "true" dir = "${cobertura.report.dir}"/>
- 		<cobertura-report format = "html" destdir = "${cobertura.report.dir}"
+    <cobertura-report format = "html" destdir = "${cobertura.report.dir}"
                       srcdir = "${src.dir}" datafile = "${cobertura.datafile}" />
-		<cobertura-report format = "xml" destdir = "${cobertura.report.dir}"
+    <cobertura-report format = "xml" destdir = "${cobertura.report.dir}"
                       srcdir = "${src.dir}" datafile = "${cobertura.datafile}"/>
     <delete file = "operation.log" failonerror = "false"/>
     <delete file = "exception.log" failonerror = "false"/>
   </target>
 
-  
+
   <!--
     | REPORT-CHECKSTYLE:
     |
